<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThankYou</string>
    <string name="action_settings">Settings</string>
    
	<string name="app_desc_null"></string>
	
	
 	 <!-- activity:inicio de session  -->
 	 <string name="app_login_register">¿Eres Nuevo?.Vamos que esperas?</string>
 	 <string name="app_login_info">Bienvenidos a ThankYou, porfavor ingrese su nombre de usuario y contraseña</string>
 	 <string name="app_login_welcome">Bienvenidos a ThankYou</string>
     <string name="app_login_descripcion">Para empezar a disfrutar de todos nuestros servicios inicie sesión o  registrese libremente usando facebook o google+</string>
      <string name="app_login_connect">Conectarme con el mundo</string>
 	 <!-- botones -->
 	 <string name="app_btn_Save">Guardar</string>
 	 <string name="app_btn_enter">Entrar</string>
 	 <string name="app_btn_close">Cerrar</string>
 	 <string name="app_btn_cancel">Cancelar</string>
 	 <string name="app_btn_leave">Salir</string>
 	 <!-- labels -->
 	 <string name="app_lbl_user">Usuario:</string>
 	 <string name="app_lbl_password">Contraseña:</string>
</resources>