<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_thankyou"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMainActivity" >

    <ImageView
        android:id="@+id/img_cars"
        style="@style/background_thankyou_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@layout/login_main"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:contentDescription="@string/app_desc_null" />

    <RelativeLayout
        style="@style/background_thankyou_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bgmenu" >

        <ImageView
            android:id="@+id/imageView2"
            style="@style/background_thankyou_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:contentDescription="@string/app_desc_null"
            android:scaleType="centerInside" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        style="@style/background_thankyou_subheader"
        android:layout_width="match_parent"
        android:padding="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_login_register" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/textView1"
            android:contentDescription="@string/app_desc_null"
            android:padding="1dp"
            android:scaleType="centerInside"
            android:src="@color/btn_googleplus" />

        <ImageButton
            android:id="@+id/ImageButton01"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageButton1"
            android:contentDescription="@string/app_desc_null"
            android:padding="1dp"
            android:scaleType="centerInside"
            android:src="@color/btn_facebook" />

        <ImageButton
            android:id="@+id/ImageButton02"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/ImageButton01"
            android:contentDescription="@string/app_desc_null"
            android:padding="1dp"
            android:scaleType="centerInside"
            android:src="@color/btn_thankyouadd" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/background_thankyou_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/app_login_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        style="@style/background_thankyou_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/app_login_descripcion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10" />

    <TextView
        android:id="@+id/textView5"
        style="@style/background_thankyou_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText2"
        android:text="@string/app_lbl_password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        style="@style/background_thankyou_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="12dp"
        android:text="@string/app_lbl_user"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        style="@style/background_btn_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:minHeight="30dp"
        android:text="@string/app_login_connect" />

</RelativeLayout>